Add in a XSDQ monad to the innermost computations here.

--- a/NOTES.org
+++ b/NOTES.org
@@ -1,12 +1,19 @@
 
-* Hackage links
+* Links
   :PROPERTIES:
   :VISIBILITY: content
   :END:
-  - [[https://hackage.haskell.org/package/template-haskell-2.19.0.0/docs/Language-Haskell-TH.html][Language.Haskell.TH]]
-  - [[https://hackage.haskell.org/package/xml-1.3.14/docs/Text-XML-Light-Types.html][Text.XML.Light.Types]]
-  - [[https://hackage.haskell.org/package/base-4.17.0.0/docs/Control-Monad-IO-Class.html][Control.Monad.IO.Class]]
-  - [[https://hackage.haskell.org/package/directory-1.3.8.0/docs/System-Directory.html][System.Directory]]
+** Hackage
+   - [[https://hackage.haskell.org/package/template-haskell-2.19.0.0/docs/Language-Haskell-TH.html][Language.Haskell.TH]]
+   - [[https://hackage.haskell.org/package/xml-1.3.14/docs/Text-XML-Light-Types.html][Text.XML.Light.Types]]
+   - [[https://hackage.haskell.org/package/base-4.17.0.0/docs/Control-Monad-IO-Class.html][Control.Monad.IO.Class]]
+   - [[https://hackage.haskell.org/package/directory-1.3.8.0/docs/System-Directory.html][System.Directory]]
+** XSD sources/samples (this directory)
+   - [[file:xsd.xsd][xsd.xsd]]
+   - [[file:datatypes.xsd][datatypes.xsd]]
+   - [[file:./shiporder0.xsd][shiporder0.xsd]]
+   - [[file:./shiporder1.xsd][shiporder1.xsd]]
+   - [[file:./shiporder2.xsd][shiporder2.xsd]]
 
 * TODO Soon --- go back and document [[./src/QDHXB/Manual.hs][Manual.hs]]
   - Need to make sense of this before adding more XSD features
