--- a/NOTES.org
+++ b/NOTES.org
@@ -18,6 +18,16 @@
 ** Cabal/Stack notes
 - In `stack.yaml`, tried setting
   `resolver: lts-12.20`
+* TODO Bootstrap the whole xsd.xsd
+  :PROPERTIES:
+  :VISIBILITY: content
+  :END:
+  - Needs <extension> next
+* TODO OFX test 1
+  :PROPERTIES:
+  :VISIBILITY: content
+  :END:
+  - Need xsd:choice
 * TODO Books example
   :PROPERTIES:
   :VISIBILITY: content
@@ -26,17 +36,6 @@
   - Need to do away with relying on the accumulation of type
     definitions --- it's got to be just the existence and alignment of
     names.
-* TODO Bootstrap the whole xsd.xsd
-  :PROPERTIES:
-  :VISIBILITY: content
-  :END:
-  - Needs <restriction> next, which should be simply a matter of
-    pulling the base type and ignoring the rest of it.
-* TODO OFX test 1
-  :PROPERTIES:
-  :VISIBILITY: content
-  :END:
-  - Need xsd:choice
 * TODO Customers/orders example --- key/keyref elements
   - For now at least, dropping the key/keyref elements
   - Re-uses names in nested declarations.  Need to disambiguate new
@@ -56,3 +55,4 @@
 * TODO Go back to key and keyref elements
   - See customersorders.xsd example
 * DONE Recognize namespaces
+* TODO Check XSD namespaces in [[file:./src/QDHXB/Internal/Input.hs][Input.hs]]'s =encodeSchemaItem= patterns, etc.
