More input cases for XSD.  Will now really have to deal with <choice>

--- a/NOTES.org
+++ b/NOTES.org
@@ -22,12 +22,13 @@
   :PROPERTIES:
   :VISIBILITY: content
   :END:
-  - Needs <extension> next
+  - Need xsd:choice occurring for separateAndDispatchComplexContents
+  - So, add another spot in the tuple for separating
 * TODO OFX test 1
   :PROPERTIES:
   :VISIBILITY: content
   :END:
-  - Need xsd:choice
+  - Need xsd:choice occurring for encodeSchemaItem
 * TODO Books example
   :PROPERTIES:
   :VISIBILITY: content
