--- a/NOTES.org
+++ b/NOTES.org
@@ -9,12 +9,13 @@
    - [[https://hackage.haskell.org/package/xml-1.3.14/docs/Text-XML-Light-Types.html][Text.XML.Light.Types]]
    - [[https://hackage.haskell.org/package/base-4.17.0.0/docs/Control-Monad-IO-Class.html][Control.Monad.IO.Class]]
    - [[https://hackage.haskell.org/package/directory-1.3.8.0/docs/System-Directory.html][System.Directory]]
-** XSD sources/samples (this directory)
-   - [[file:xsd.xsd][xsd.xsd]]
-   - [[file:datatypes.xsd][datatypes.xsd]]
-   - [[file:./shiporder0.xsd][shiporder0.xsd]]
-   - [[file:./shiporder1.xsd][shiporder1.xsd]]
-   - [[file:./shiporder2.xsd][shiporder2.xsd]]
+** XSD sources/samples
+   - [[https://www.w3schools.com/xml/schema_elements_ref.asp][W3 Schools XSD reference]]
+   - [[file:xsd.xsd][xsd.xsd]] - local
+   - [[file:datatypes.xsd][datatypes.xsd]] - local
+   - [[file:./shiporder0.xsd][shiporder0.xsd]] - local
+   - [[file:./shiporder1.xsd][shiporder1.xsd]] - local
+   - [[file:./shiporder2.xsd][shiporder2.xsd]] - local
 ** Cabal/Stack notes
 - In `stack.yaml`, tried setting
   `resolver: lts-12.20`
