--- a/NOTES.org
+++ b/NOTES.org
@@ -19,6 +19,8 @@
 ** Cabal/Stack notes
 - In `stack.yaml`, tried setting
   `resolver: lts-12.20`
+* TODO Sizes (no list) example
+  - Need to generate the decodeAs[name] function for union types
 * TODO Bootstrap the whole xsd.xsd
   :PROPERTIES:
   :VISIBILITY: content
