Most tests passing again.
Use a qualified import for names in macro expansions.

--- a/NOTES.org
+++ b/NOTES.org
@@ -20,6 +20,7 @@
 ** Cabal/Stack notes
 - In `stack.yaml`, tried setting
   `resolver: lts-12.20`
+* TODO CustomerOrders1 current disabled
 * TODO Sizes (no list) example
   - Need to generate the decodeAs[name] function for union types
 * TODO Bootstrap the whole xsd.xsd
@@ -36,7 +37,7 @@
   :PROPERTIES:
   :VISIBILITY: content
   :END:
-  - It's the order in the inmodified XSD that's a problem
+  - It's the order in the unmodified XSD that's a problem
   - Need to do away with relying on the accumulation of type
     definitions --- it's got to be just the existence and alignment of
     names.
