--- a/NOTES.org
+++ b/NOTES.org
@@ -22,8 +22,17 @@ xbxu
 ** Cabal/Stack notes
 - In `stack.yaml`, tried setting
   `resolver: lts-12.20`
-* TODO Sizes (no list) example
-  - Need to generate the decodeAs[name] function for union types
+* Failing examples
+** TODO Sizes (no list) example
+   - Need to generate the decodeAs[name] function for union types
+** TODO Books example
+   :PROPERTIES:
+   :VISIBILITY: content
+   :END:
+   - It's the order in the unmodified XSD that's a problem
+   - Need to do away with relying on the accumulation of type
+     definitions --- it's got to be just the existence and alignment of
+     names.
 * TODO Bootstrap the whole xsd.xsd
   :PROPERTIES:
   :VISIBILITY: content
@@ -34,14 +43,6 @@ xbxu
   :VISIBILITY: content
   :END:
   - Need xsd:choice occurring for encodeSchemaItem
-* TODO Books example
-  :PROPERTIES:
-  :VISIBILITY: content
-  :END:
-  - It's the order in the unmodified XSD that's a problem
-  - Need to do away with relying on the accumulation of type
-    definitions --- it's got to be just the existence and alignment of
-    names.
 * TODO Customers/orders example --- key/keyref elements
   - For now at least, dropping the key/keyref elements
   - Re-uses names in nested declarations.  Need to disambiguate new
