Checkpoint --- sort of backing out of ElementTypeDecl.  All commented out, but not deleted yet.  Will pursue removing extra parameter from type decoders first.

--- a/test/INVENTORY.org
+++ b/test/INVENTORY.org
@@ -73,7 +73,7 @@
     :PROPERTIES:
     :CUSTOM_ID: Shiporder0
     :END:
-*** ACTIVE Shiporder/Shiporder1.hs
+*** DEACTIVATED Shiporder/Shiporder1.hs
     :PROPERTIES:
     :CUSTOM_ID: Shiporder1
     :END:
