--- a/NOTES.org
+++ b/NOTES.org
@@ -1,4 +1,3 @@
-
 * Links
   :PROPERTIES:
   :VISIBILITY: content
@@ -11,6 +10,7 @@
    - [[https://hackage.haskell.org/package/xml-1.3.14/docs/Text-XML-Light-Types.html][Text.XML.Light.Types]]
    - [[https://hackage.haskell.org/package/base-4.17.0.0/docs/Control-Monad-IO-Class.html][Control.Monad.IO.Class]]
    - [[https://hackage.haskell.org/package/mtl-2.3.1/docs/Control-Monad-Except.html][Control.Monad.Except]]
+   - [[https://hackage.haskell.org/package/mtl-2.3.1/docs/Control-Monad-State-Lazy.html][Control.Monad.State (.Lazy)]]
    - [[https://hackage.haskell.org/package/directory-1.3.8.0/docs/System-Directory.html][System.Directory]]
 ** XSD sources/samples
    - [[https://www.w3schools.com/xml/schema_elements_ref.asp][W3 Schools XSD reference]], [[https://www.w3schools.com/xml/schema_intro.asp][tutorial]]
